# PyIPaaS

./: pyproject.toml
pyipaas_iics/: MetaData_Class.py  RunAJob_Class.py  __init__.py  main.py
tests/: test_pyipaas_iics.py
